# chitchat

./: .env_template  .gitignore  Cargo.toml  README.md  config_template.toml
.cargo/: config
frontend/: chat.js  index.html  package-lock.json  package.json  sse.html  style.css  webpack.config.js
frontend/src/: index.js
frontend/styles/: style.css
src/: chat.rs  get_paste.rs  main.rs  models.rs  pagination.rs  pastes.rs  raw  raw.html  schema.rs  sockjs_server.rs  sse.rs  websocket_server.rs
