[package]
name = "pastepin_chat"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-files = "0.1"
actix-web-actors = "1.0"
rand = "*"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
