[package]
name = "chitchat"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-files = "0.1"
actix-web-actors = "1.0"
actix-session = "0.2"
rand = "*"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#sockjs = { git = "https://github.com/aqatl/sockjs", branch = "0.4.0-hotfix" }
tokio = "0.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["r2d2", "postgres", "chrono"] }
r2d2 = "0.8"
dotenv = "0.10"
