[package]
name = "chitchat"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-files = "0.2.2"
actix-web-actors = "2.0.0"
actix-session = "0.3"
actix-rt = "1.1.1"
rand = "*"
toml = "0.5"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
#sockjs = { git = "https://github.com/aqatl/sockjs", branch = "0.4.0-hotfix" }
tokio = { version = "0.2", features = ["time", "stream"] }
futures-util = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["r2d2", "postgres", "chrono"] }
r2d2 = "0.8"
dotenv = "0.10"
ffsend-api = { version = "0.4.4"}
openssl-probe = "0.1"
url = "1.7"
